--- a/src/components/Layout/Navigation/Navbar/Navbar.module.css
+++ b/src/components/Layout/Navigation/Navbar/Navbar.module.css
@@ -1,16 +1,17 @@
-.navbar {
+.navbarContainer {
    width: 100%;
    height: 64px;
    position: fixed;
    top: 0;
    left: 0;
    /* background-color:aliceblue; */
-   /* background-color: #fff; */
-   background: rgba(255,255,255,0.5);
+   background-color: #fff;
+   /* background: rgba(255,255,255,0.5); */
    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.25);
+   z-index: 1;
 }
 
-.navContainer {
+.navbar {
    height: 100%;
    max-width: 1200px;
    padding: 0 30px;
@@ -20,17 +21,13 @@
    align-items: center;
 }
 
-.logo {
-   background: -webkit-linear-gradient(#444f5f8f, #374356);
-   /* background: -webkit-linear-gradient(#0973b9, #374356); */
-
-   font-weight: 700;
-   font-size: 30px;
-   color: transparent;
-   background-clip: text;
-   -webkit-background-clip: text;
-   -webkit-text-fill-color: transparent;
-}
-.navbarItemsContainer {
+.navigationContainer {
    height: 100%;
+}
+
+/* Adjustments For Mobile view  */
+@media screen and (max-width: 768px) {
+   .navigationContainer {
+      display: none;
+   }
 }
