--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -7,5 +7,8 @@
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
+   letter-spacing: -1px;
 }
-
+.logo span {
+   padding-left: 5px;
+}
