--- a/src/components/Layout/pages/Home/Banner/Banner.css
+++ b/src/components/Layout/pages/Home/Banner/Banner.css
@@ -1,9 +1,15 @@
 .banner img {
-    object-fit: cover;
     height: calc(100vh - 64px);
+    object-fit: cover;
 }
 
-.carousel-caption {
-    top: 50%;
-    bottom: auto;
-}
+/* Adjustments For Mobile view  */
+@media screen and (max-width: 768px) {
+    .banner img {
+        height: calc(60vh);
+    }
+    
+    .carousel-caption {
+        top: 40%;
+    }
+ }
